--- a/.hemtt/base.toml
+++ b/.hemtt/base.toml
@@ -3,5 +3,7 @@ prefix = "HT"
 author = "Seb"
 template = "cba"
 mainprefix = "z"
+include = ["./include"]
+files = ["mod.cpp"]
 folder_optionals = true
 sig_version = 3
