--- a/.hemtt/base.toml
+++ b/.hemtt/base.toml
@@ -4,6 +4,11 @@ author = "Seb"
 template = "cba"
 mainprefix = "z"
 include = ["./include"]
-files = ["mod.cpp"]
+files = [
+    "mod.cpp",
+    "logo.paa",
+    "logoSmall.paa",
+    "logoOver.paa"
+] 
 folder_optionals = true
 sig_version = 3
